--- a/day04/profile/index.html
+++ b/day04/profile/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>css practice3</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="style1.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="card">
@@ -16,8 +16,9 @@
         <button>Follow</button>
       </div>
       <div class="desc">
-        SSG JAVA Develper Class! 최고! 다 잘될꺼에요~ ^^
+        SSG JAVA Develper Class! 최고!  
       </div>
     </div>
   </body>
 </html>
+
