--- a/day04/newflix_01/index.html
+++ b/day04/newflix_01/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Newflix</title>
-    
+    <link rel="stylesheet" href="./css/login.css">
   </head>
   <body>
+   <div class="login-title">        
+       <img src="./img/login-img.png" alt="logImage">
+       <h1 class="login-title-maintext">Newflix</h1>
+       <p class="login-title-subtext">새로운 OTT 뉴필릭스 등장! 지금 가입하면 무료!</p>
+   </div>
+   <div>
+     <form action="#" class="login-form">
+       <input type="text" name="username" required autocomplete="off" placeholder="ID">
+       <input type="password" name="password" required autocomplete="off" placeholder="PASSWORD">
+       <input type="submit" value="접속하기">
+     </form>
+   </div>
    
   </body>
 </html>
