--- a/day04/newflix_02/find.html
+++ b/day04/newflix_02/find.html
@@ -8,6 +8,53 @@
     <link rel="stylesheet" href="./css/find.css" />
   </head>
   <body>
-   
+    <form class="find-search-bar-form display-flex-center position-relative">
+      <div class="display-flex-center position-relative">
+         <input class="find-search-bar" placeholder="검색하기">
+        <span class="material-symbols-outlined">
+          search
+        </span>
+      </div>
+    </form>
+
+   <div clas="best-movie position-relative">
+           <div class="best-movie__img-container">
+              <img class="best-movie__img" src="./img/find-bestMovie-img.jpg" alt="bestMovie__img">
+           </div>
+           <div>
+              <span class="material-symbols-outlined">
+                play_arrow
+              </span>
+           </div>
+           <div class="best-movie-title">
+                 <p class="best-movie-promotion-title">지금 가장 흥행하는 작품은?</p>
+                 <span class="best-movie__movie-name"></span>
+           </div>
+   </div>
+
+   <div class="movie-recommendation">
+      <span class="movie-recommendation__title"></span>
+      <ul class="movie-recommendation__images">
+        <li>
+          <img src="./img/find-movieRecommendation-01.jpg" alt="">
+        </li>
+        <li>
+          <img src="./img/find-movieRecommendation-02.jpg" alt="">
+        </li>
+        <li>
+          <img src="./img/find-movieRecommendation-03.jpg" alt="">
+        </li>
+      </ul>
+
+   </div>
+   <div class="navigation-bar">
+      <a href="find.html"><span class="material-symbols-outlined">
+        search
+      </span></a>
+      <a href="mypage.html"><span class="material-symbols-outlined">
+        person
+      </span></a>
+   </div>
+     
   </body>
 </html>
