--- a/day04/newflix_02/find.html
+++ b/day04/newflix_02/find.html
@@ -10,51 +10,44 @@
   <body>
     <form class="find-search-bar-form display-flex-center position-relative">
       <div class="display-flex-center position-relative">
-         <input class="find-search-bar" placeholder="검색하기">
-        <span class="material-symbols-outlined">
-          search
-        </span>
+        <input class="find-search-bar" placeholder="검색하기" />
+        <span class="material-icons-outlined"> search </span>
       </div>
     </form>
 
-   <div clas="best-movie position-relative">
-           <div class="best-movie__img-container">
-              <img class="best-movie__img" src="./img/find-bestMovie-img.jpg" alt="bestMovie__img">
-           </div>
-           <div>
-              <span class="material-symbols-outlined">
-                play_arrow
-              </span>
-           </div>
-           <div class="best-movie-title">
-                 <p class="best-movie-promotion-title">지금 가장 흥행하는 작품은?</p>
-                 <span class="best-movie__movie-name"></span>
-           </div>
-   </div>
+    <div class="best-movie position-relative">
+      <div class="best-movie__img-container">
+        <img class="best-movie__img" src="./img/find-bestMovie-img.jpg" />
+        <span class="material-icons"> play_arrow </span>
+      </div>
+      <div class="best-movie__title">
+        <p class="best-movie__promotion-text">지금 가장 흥행하는 작품은?</p>
+        <span class="best-movie__movie-name">승리호</span>
+      </div>
+    </div>
 
-   <div class="movie-recommendation">
-      <span class="movie-recommendation__title"></span>
-      <ul class="movie-recommendation__images">
+    <div class="movie-recommendation">
+      <span class="movie-recommendation__title">다른 작품 보기 ></span>
+      <ul class="movie-recommendation__imges">
         <li>
-          <img src="./img/find-movieRecommendation-01.jpg" alt="">
+          <img src="./img/find-movieRecommendation-01.jpg" />
         </li>
         <li>
-          <img src="./img/find-movieRecommendation-02.jpg" alt="">
+          <img src="./img/find-movieRecommendation-02.jpg" />
         </li>
         <li>
-          <img src="./img/find-movieRecommendation-03.jpg" alt="">
+          <img src="./img/find-movieRecommendation-03.jpg" />
         </li>
       </ul>
+    </div>
 
-   </div>
-   <div class="navigation-bar">
-      <a href="find.html"><span class="material-symbols-outlined">
-        search
-      </span></a>
-      <a href="mypage.html"><span class="material-symbols-outlined">
-        person
-      </span></a>
-   </div>
-     
+    <div class="navigation-bar">
+      <a href="find.html">
+        <span class="material-icons-outlined find-icon-clicked"> search </span>
+      </a>
+      <a href="mypage.html">
+        <span class="material-icons-outlined"> person_outline </span>
+      </a>
+    </div>
   </body>
 </html>
